--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@chakra-ui/icons": "^1.1.1",
     "@chakra-ui/react": "^1.7.2",
     "@chakra-ui/spinner": "^1.2.1",
+    "@emotion/styled": "^11.6.0",
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^12.1.0",
     "@types/enzyme": "^3.10.9",
